--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -77,7 +77,7 @@
   }
 
 }
-@media (max-width: 640px) {
+@media (max-width: 569px) {
   .navbar{
     padding: .8vw 0.8vw;
   }
